add window close minimize action

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				<img class="b_a" src="./img/a_bar.png" alt="meter_bar" />
 			</div>
 			<div class="b_bar_li" id="b_opls">
-				<img class="b_a" src="./img/a_bar.png" alt="meter_bar" />
+				<img class="b_a" src="./img/a_bar.png" id="im_opls" alt="meter_bar" />
 			</div>
 		</div>
 		<div class="digital_str">
